report list items

--- a/src/main/frontend/src/app/log-calendar/log-calendar.style.less
+++ b/src/main/frontend/src/app/log-calendar/log-calendar.style.less
@@ -5,3 +5,9 @@
 .report-calendar {
   margin-top: 16px;
 }
+
+.report-list-item:hover {
+  cursor: pointer;
+  background-color: #e6e6e6;
+  border: 2px #333333 solid;
+}
