project name in report list item

--- a/src/main/frontend/src/app/log-calendar/log-calendar.template.html
+++ b/src/main/frontend/src/app/log-calendar/log-calendar.template.html
@@ -116,22 +116,28 @@
           class="panel panel-default margin-top report-list-item"
         >
           <div class="panel-body" ng-click="lcCtrl.openReportModal(report.id)">
-            <div class="col-md-4 margin-top margin-bottom">
+            <div class="col-md-3 margin-top margin-bottom">
               <small><i class="glyphicon glyphicon-user"></i></small>
               <span>
                 {{ report.employeeName + " " + report.employeeSurname }}
               </span>
             </div>
-            <div class="col-md-4 margin-top margin-bottom">
+            <div class="col-md-3 margin-top margin-bottom">
               <small><i class="glyphicon glyphicon-time"></i></small>
               <span>
                 {{ report.hoursNumber + " h" }}
               </span>
             </div>
-            <div class="col-md-4 margin-top margin-bottom">
+            <div class="col-md-3 margin-top margin-bottom">
               <small><i class="glyphicon glyphicon-calendar"></i></small>
               <span>
                 {{ report.date | date }}
+              </span>
+            </div>
+            <div class="col-md-3 margin-top margin-bottom">
+              <small><i class="glyphicon glyphicon-blackboard"></i></small>
+              <span>
+                {{ report.projectName }}
               </span>
             </div>
           </div>
