--- a/src/main/frontend/src/app/log-calendar/log-calendar.style.less
+++ b/src/main/frontend/src/app/log-calendar/log-calendar.style.less
@@ -9,5 +9,5 @@
 .report-list-item:hover {
   cursor: pointer;
   background-color: #e6e6e6;
-  border: 2px #333333 solid;
+  border: 2px #adadad solid;
 }
