--- a/src/main/frontend/src/app/report-details/report-details.template.html
+++ b/src/main/frontend/src/app/report-details/report-details.template.html
@@ -109,7 +109,7 @@
             class="form-control"
             name="hoursNumber"
             placeholder="hours number"
-            ng-model="rdCtrl.report.hours"
+            ng-model="rdCtrl.report.hoursNumber"
             required
             min="0"
             max="8"
@@ -123,7 +123,7 @@
           8.</span
         >
         <p ng-if="rdCtrl.reportId && !rdCtrl.report.editable">
-          {{ rdCtrl.report.hours }}
+          {{ rdCtrl.report.hoursNumber }}
         </p>
       </div>
       <div
@@ -151,7 +151,7 @@
       <div class="form-group" ng-if="rdCtrl.reportId">
         <label>Employee</label>
         <p>
-          {{ rdCtrl.report.userName + " " + rdCtrl.report.userSurName }}
+          {{ rdCtrl.report.userName + " " + rdCtrl.report.employeeSurname }}
         </p>
       </div>
       <div
