--- a/src/main/frontend/src/app/projects-list/projects-list.template.html
+++ b/src/main/frontend/src/app/projects-list/projects-list.template.html
@@ -32,8 +32,8 @@
           <colgroup>
             <col class="col-xs-1">
             <col class="col-xs-2">
-            <col class="col-xs-6">
-            <col class="col-xs-2">
+            <col class="col-xs-6 col-md-7">
+            <col class="col-xs-2 col-md-1">
           </colgroup>
           <th>#</th>
           <th>
@@ -57,13 +57,14 @@
         </tbody>
         <tbody>
           <tr ng-repeat="project in $data | orderBy:'name'"
-              style="word-wrap: break-word">
+              style="word-wrap: break-word"
+              class="text-center">
             <td class="text-center">
               {{ (params.page() - 1) * params.count() + $index + 1 }}
             </td>
             <td>{{ project.name }}</td>
-            <td>{{ project.description }}</td>
-            <td class="text-center">
+            <td class="text-left">{{ project.description }}</td>
+            <td>
               <span ng-click="plCtrl.openProjectModal(project.id)" uib-tooltip="Edit project">
                 <i class="glyphicon glyphicon-pencil"></i>
               </span>
