--- a/src/main/frontend/src/app/log-calendar/log-calendar.template.html
+++ b/src/main/frontend/src/app/log-calendar/log-calendar.template.html
@@ -115,7 +115,10 @@
           ng-repeat="report in lcCtrl.reportsList | limitTo : lcCtrl.listViewItemsPerPage : ((lcCtrl.listViewPage - 1) * lcCtrl.listViewItemsPerPage)"
           class="panel panel-default margin-top report-list-item"
         >
-          <div class="panel-body" ng-click="lcCtrl.openReportModal(report.id)">
+          <div
+            class="panel-body"
+            ng-click="lcCtrl.openReportModal(report.workReportId)"
+          >
             <div class="col-sm-3 margin-top margin-bottom text-center">
               <small><i class="glyphicon glyphicon-user"></i></small>
               <span>
