--- a/src/main/frontend/src/app/projects-list/projects-list.template.html
+++ b/src/main/frontend/src/app/projects-list/projects-list.template.html
@@ -1,82 +1,107 @@
 <section class="container">
-  <form name="employeesSearchForm" class="panel panel-default">
-    <div class="panel-heading">
-        <div class="col-sm-5 col-sm-offset-3 col-xs-8">
-            <multi-item-select
-              model="plCtrl.filterCriteria.projects"
-              placeholder="project name"
-              provider="plCtrl.provideProjects(request)"
-            >
-            </multi-item-select>
+  <form name="projectsSearchForm" class="panel panel-default">
+    <div class="panel-body">
+      <div class="row">
+        <div class="col-md-6 col-sm-8 margin-bottom margin-top">
+          <multi-item-select
+            model="plCtrl.filterCriteria.projects"
+            placeholder="project name"
+            provider="plCtrl.provideProjects(request)"
+          >
+          </multi-item-select>
         </div>
-        <div class="btn-group" class="col-sm-3">
+        <div class="col-md-6 col-sm-4 margin-bottom margin-top">
+          <div class="pull-right">
             <button class="btn btn-primary" ng-click="plCtrl.search()">
               <span>Search </span>
               <small><i class="glyphicon glyphicon-search"></i></small>
             </button>
-            <button class="btn btn-primary" ng-click="plCtrl.openProjectModal()">
+            <button
+              class="btn btn-primary"
+              ng-click="plCtrl.openProjectModal()"
+            >
               <span>Add Project </span>
               <small><i class="glyphicon glyphicon-plus"></i></small>
             </button>
+          </div>
         </div>
       </div>
     </div>
   </form>
+
   <div class="row">
-      <table ng-table="plCtrl.projectsTable"
-          class="table table-bordered table-striped margin-bottom"
-          template-pagination="custom/pager"
-             style="table-layout: fixed"
-        >
-        <thead>
-          <colgroup>
-            <col class="col-xs-1">
-            <col class="col-xs-2">
-            <col class="col-xs-6 col-md-7">
-            <col class="col-xs-2 col-md-1">
-          </colgroup>
-          <th>#</th>
-          <th>
-            <div class="row">
-              Name
-              <span ng-click="plCtrl.filterCriteria.sorted = 'ASC'; plCtrl.reloadTable()" uib-tooltip="Order ASC">
-                  <i class="glyphicon glyphicon-triangle-top"></i>
-              </span>
-                  <span ng-click="plCtrl.filterCriteria.sorted = 'DESC'; plCtrl.reloadTable()" uib-tooltip="Order DESC">
-                  <i class="glyphicon glyphicon-triangle-bottom"></i>
-              </span>
-            </div>
-          </th>
-          <th>Description</th>
-          <th>Actions</th>
-        </thead>
-        <tbody ng-show="$data.length == 0">
+    <table
+      ng-table="plCtrl.projectsTable"
+      class="table table-bordered table-striped margin-bottom"
+      template-pagination="custom/pager"
+      style="table-layout: fixed"
+    >
+      <thead>
+        <colgroup>
+          <col class="col-xs-1" />
+          <col class="col-xs-2" />
+          <col class="col-xs-6 col-md-7" />
+          <col class="col-xs-2 col-md-1" />
+        </colgroup>
+        <th>#</th>
+        <th>
+          <div class="row">
+            Name
+            <span
+              ng-click="plCtrl.filterCriteria.sorted = 'ASC'; plCtrl.reloadTable()"
+              uib-tooltip="Order ASC"
+            >
+              <i class="glyphicon glyphicon-triangle-top"></i>
+            </span>
+            <span
+              ng-click="plCtrl.filterCriteria.sorted = 'DESC'; plCtrl.reloadTable()"
+              uib-tooltip="Order DESC"
+            >
+              <i class="glyphicon glyphicon-triangle-bottom"></i>
+            </span>
+          </div>
+        </th>
+        <th>Description</th>
+        <th>Actions</th>
+      </thead>
+      <tbody ng-show="$data.length == 0">
         <tr>
           <td colspan="7">No data available.</td>
         </tr>
-        </tbody>
-        <tbody>
-          <tr ng-repeat="project in $data | orderBy:'name'"
-              style="word-wrap: break-word"
-              class="text-center">
-            <td class="text-center">
-              {{ (params.page() - 1) * params.count() + $index + 1 }}
-            </td>
-            <td>{{ project.name }}</td>
-            <td class="text-left">{{ project.description }}</td>
-            <td>
-              <span ng-click="plCtrl.openProjectModal(project.id)" uib-tooltip="Edit project">
-                <i class="glyphicon glyphicon-pencil"></i>
-              </span>
-              <span ng-click="plCtrl.openReportModal(project.id, true)" uib-tooltip="Show accepted reports">
-                <i class="glyphicon glyphicon-list"></i>
-              </span>
-              <span ng-click="plCtrl.openReportModal(project.id, false)" uib-tooltip="Show new reports">
-                <i class="glyphicon glyphicon-align-right"></i>
-              </span>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+      </tbody>
+      <tbody>
+        <tr
+          ng-repeat="project in $data | orderBy:'name'"
+          style="word-wrap: break-word"
+          class="text-center"
+        >
+          <td class="text-center">
+            {{ (params.page() - 1) * params.count() + $index + 1 }}
+          </td>
+          <td>{{ project.name }}</td>
+          <td class="text-left">{{ project.description }}</td>
+          <td>
+            <span
+              ng-click="plCtrl.openProjectModal(project.id)"
+              uib-tooltip="Edit project"
+            >
+              <i class="glyphicon glyphicon-pencil"></i>
+            </span>
+            <span
+              ng-click="plCtrl.openReportModal(project.id, true)"
+              uib-tooltip="Show accepted reports"
+            >
+              <i class="glyphicon glyphicon-list"></i>
+            </span>
+            <span
+              ng-click="plCtrl.openReportModal(project.id, false)"
+              uib-tooltip="Show new reports"
+            >
+              <i class="glyphicon glyphicon-align-right"></i>
+            </span>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </section>
