--- a/src/main/frontend/src/app/nav/nav.html
+++ b/src/main/frontend/src/app/nav/nav.html
@@ -1,35 +1,38 @@
-<style>
-    .user {
-        font-weight: bold;
-    }
-
-    .logout {
-        cursor: pointer;
-        margin-left: 5px;
-    }
-</style>
-
 <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button ng-show="user.username" type="button" class="navbar-toggle" ng-click="isNavCollapsed = !isNavCollapsed">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" ui-sref="home">Hour reporting system</a>
-        </div>
-        <div ng-show="user.username" class="navbar-collapse collapse" uib-collapse="!isNavCollapsed">
-            <ul class="nav navbar-nav">
-                <li ng-show="user.username"><a ui-sref="employees">Employees</a></li>
-                <li ng-show="user.username"><a ui-sref="projects">Projects</a></li>
-                <li ng-show="AuthService.hasRole('ADMIN')"><a ui-sref="register">Register</a></li>
-                <li ng-show="user.username"><a ui-sref="calendar">Calendar</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li ng-show="user.username"><a> <span class="user">Hi, {{user.name}}</span> <span ng-click="logout()" href="" class="logout">Logout</span></a></li>
-            </ul>
-        </div>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button
+        ng-show="user.username"
+        type="button"
+        class="navbar-toggle"
+        ng-click="isNavCollapsed = !isNavCollapsed"
+      >
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" ui-sref="calendar">Hour reporting system</a>
     </div>
+    <div
+      ng-show="user.username"
+      class="navbar-collapse collapse"
+      uib-collapse="!isNavCollapsed"
+    >
+      <ul class="nav navbar-nav">
+        <li ng-show="AuthService.hasRole('ADMIN')">
+          <a ui-sref="employees">Employees</a>
+        </li>
+        <li ng-show="user.username"><a ui-sref="projects">Projects</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li ng-show="user.username">
+          <a>
+            <span class="user">Hi, {{ user.name }}</span>
+            <span ng-click="logout()" href="" class="logout">Logout</span></a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
