--- a/src/main/frontend/src/app/project-details/project-details.template.html
+++ b/src/main/frontend/src/app/project-details/project-details.template.html
@@ -27,16 +27,16 @@
           ng-minlength="2"
           ng-maxlength="32"
           ng-disabled="pdCtrl.projectId"
+          unique-project-name
         />
         <span
           class="help-block"
           ng-show="projectForm.name.$invalid && (projectForm.name.$touched || projectForm.$submitted)"
-          >Project name is required and needs to have between 2 and 32
-          characters.</span
+          >Project name invalid! Needs to have between 2 and 32
+          characters and be unique.</span
         >
       </div>
-      <div
-        class="form-group"
+      <div class="form-group"
         ng-class="{'has-error': projectForm.description.$invalid && (projectForm.description.$touched || projectForm.$submitted)}"
       >
         <label for="description">Description</label>
@@ -54,27 +54,35 @@
         <span
           class="help-block"
           ng-show="projectForm.description.$invalid && (projectForm.description.$touched || projectForm.$submitted)"
-          >Project description is required and needs to have at least 5
+          >Project description invalid! Needs to have at least 5
           characters.</span
         >
       </div>
+      <div ng-show="pdCtrl.projectId" class="margin-bottom margin-top">
+        <label for="keepEmployees">Keep assigned employees:
+          <input type="checkbox"
+                 ng-model = "pdCtrl.project.keepEmployees"
+                 id="keepEmployees"
+          >
+        </label>
+      </div>
       <div
         class="form-group"
-        ng-class="{'has-error': pdCtrl.project.employees.length == 0 && (projectForm.assignedEmployees.$touched || projectForm.$submitted)}"
+        ng-class="{'has-error': !pdCtrl.project.keepEmployees && pdCtrl.employees.length == 0 && (projectForm.assignedEmployees.$touched || projectForm.$submitted)}"
       >
         <label>Assign employees</label>
         <multi-employees-select
-          model="pdCtrl.project.employees"
+          model="pdCtrl.employees"
           placeholder="employees"
           provider="pdCtrl.provideEmployees(request)"
           name="assignedEmployees"
         >
         </multi-employees-select>
-        <span
-          class="help-block"
-          ng-show="pdCtrl.project.employees.length == 0 && (projectForm.assignedEmployees.$touched || projectForm.$submitted)"
-          >At least one employee needs to be assigned.</span
+        <span class="help-block"
+          ng-show="!pdCtrl.project.keepEmployees && pdCtrl.employees.length == 0 && (projectForm.assignedEmployees.$touched || projectForm.$submitted)"
         >
+          At least one employee needs to be assigned.
+        </span>
       </div>
     </form>
   </div>
@@ -83,7 +91,7 @@
       class="btn btn-primary"
       type="button"
       ng-click="pdCtrl.save(projectForm)"
-      ng-disabled="(projectForm.$invalid || pdCtrl.project.employees.length == 0) && projectForm.$submitted"
+      ng-disabled="(projectForm.$invalid || (!pdCtrl.project.keepEmployees && pdCtrl.employees.length == 0)) && projectForm.$submitted"
     >
       Save
     </button>
