--- a/src/main/frontend/src/app/employee-details/employee-details.template.html
+++ b/src/main/frontend/src/app/employee-details/employee-details.template.html
@@ -19,6 +19,7 @@
       >
         <label for="username">Username</label>
         <input
+          id="username"
           type="text"
           class="form-control"
           name="username"
@@ -49,6 +50,7 @@
       >
         <label for="name">Name</label>
         <input
+          id="name"
           type="text"
           class="form-control"
           name="name"
@@ -70,6 +72,7 @@
       >
         <label for="surname">Surname</label>
         <input
+          id="surname"
           type="text"
           class="form-control"
           name="surname"
@@ -92,6 +95,7 @@
       >
         <label for="email">Email</label>
         <input
+          id="email"
           type="email"
           class="form-control"
           name="email"
@@ -121,6 +125,7 @@
           >
             <label for="password">Password</label>
             <input
+              id="password"
               type="password"
               class="form-control"
               name="password"
@@ -143,6 +148,7 @@
           >
             <label for="confirmPassword">Confirm password</label>
             <input
+              id="confirmPassword"
               type="password"
               class="form-control"
               name="confirmPassword"
