--- a/src/main/frontend/src/app/employee-data/employee-data.html
+++ b/src/main/frontend/src/app/employee-data/employee-data.html
@@ -3,7 +3,7 @@
     <div class="panel-heading">My account</div>
     <div class="panel-body">
       <div class="col-md-12">
-        <table ng-controller="EmpDataController" ng-init="getProjects(user.id)" class="col-md-7">
+        <table ng-controller="EmpDataController" ng-init="getProjects()" class="col-md-7">
           <thead>
             <tr>
               <th>Project</th>
