--- a/src/main/frontend/src/app/employee-data/employee-data.html
+++ b/src/main/frontend/src/app/employee-data/employee-data.html
@@ -1,9 +1,9 @@
 <div class=" col-md-6 col-md-offset-3">
   <div class="panel panel-default">
-    <div class="panel-heading">My statistics</div>
+    <div class="panel-heading">Account statistics</div>
     <div class="panel-body">
       <div class="col-md-12">
-        <table ng-controller="EmpDataController" ng-if="noReports" ng-init="getProjects()"
+        <table ng-controller="EmpDataController" ng-init="getProjects()"
                class="table table-bordered table-striped" template-pagination="custom/pager"
                 style="float: left">
           <thead>
