changed item removal identificator

--- a/src/main/frontend/src/app/shared/directives/multi-employees-select/multi-employees-select.template.html
+++ b/src/main/frontend/src/app/shared/directives/multi-employees-select/multi-employees-select.template.html
@@ -6,7 +6,7 @@
     <span>{{ employee.name }} </span>
     <i
       class="glyphicon glyphicon-trash"
-      ng-click="deleteEmployee($index, $model)"
+      ng-click="deleteEmployee(employee)"
       uib-tooltip="Delete employee"
     ></i>
   </div>
